--- a/.gitignore
+++ b/.gitignore
@@ -143,11 +143,14 @@ celerybeat.pid
 # Environments
 .env
 .venv
+.cfg
 env/
 venv/
 ENV/
 env.bak/
 venv.bak/
+*_env/
+Scripts/
 
 # Spyder project settings
 .spyderproject
